--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,5 +1,5 @@
 <div class="flex w-full justify-center">
-  <div class="flex flex-col w-full gap-5">
+  <div class="flex flex-col max-w-screen-2xl gap-5">
     <p-card class="flex" styleClass="w-full m-0">
       <h2>User Information</h2>
       <div class="card-content">
